sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:12: error: value foreach is not a member of Int
    for (i<-getNombreValeurs()-2){
                              ^